# mRNA

./: .gitignore  Analyzer.cpp  CMakeLists.txt  DSNetwork.h  MAERIModel.cpp  MSNetwork.cpp  MSNetwork.h  MappingStrategy.cpp  README.md  RSNetwork.cpp  RSNetwork.h  ReviseLog  SDMemory.cpp  SDMemory.h  VNAT.cpp  main.cpp  makefile
Input/: resnet.py  rnn.py  vgg_model.py
Input/alexnet/: Model_parameter_1.txt  Model_parameter_10.txt  Model_parameter_11.txt  Model_parameter_2.txt  Model_parameter_3.txt  Model_parameter_4.txt  Model_parameter_5.txt  Model_parameter_6.txt  Model_parameter_7.txt  Model_parameter_8.txt  Model_parameter_9.txt  conv.txt  maxpool.txt
Input/googlenet/: Model_parameter_conv1.txt  Model_parameter_conv3.txt  Model_parameter_inception3a_1.txt  Model_parameter_inception3a_2.txt  Model_parameter_inception3a_3.txt  Model_parameter_inception3a_4.txt  Model_parameter_inception3a_5.txt  Model_parameter_inception3b_1.txt  Model_parameter_inception3b_2.txt  Model_parameter_inception3b_3.txt  Model_parameter_inception3b_4.txt  Model_parameter_inception3b_5.txt  Model_parameter_inception4a_1.txt  Model_parameter_inception4a_2.txt  Model_parameter_inception4a_3.txt  Model_parameter_inception4a_4.txt  Model_parameter_inception4a_5.txt  Model_parameter_inception4b_1.txt  Model_parameter_inception4b_2.txt  Model_parameter_inception4b_3.txt  Model_parameter_inception4b_4.txt  (+26 more)
Tensorflow_parser/: README.md  network_parser.py
src/: Analyzer.h  DNNModel.cpp  DSNetwork.cpp  MAERIModel.h  MappingStrategy.h  VNAT.h  main.cpp  utility.cpp  utility.h
(+148 files in other folders)
